--- a/Worker.Blazor.Wasm/Shared/MainLayout.razor
+++ b/Worker.Blazor.Wasm/Shared/MainLayout.razor
@@ -5,7 +5,12 @@
     <MNavigationDrawer App @bind-Value="_b">
         <LydNavigation></LydNavigation>
     </MNavigationDrawer>
-    <LydAppBar ChangeDrawer=@ChangeDrawer></LydAppBar>
+
+    <MAppBar App>
+        <MAppBarNavIcon @onclick="()=>_b=!_b"></MAppBarNavIcon>
+        <LydAppBar></LydAppBar>
+    </MAppBar>
+    
   <!-- 根据应用组件来调整你的内容 -->
   <MMain>
     <!-- 给应用提供合适的间距 -->
@@ -20,5 +25,4 @@
 </MApp>
 @code{
     bool _b=true;
-    void ChangeDrawer()=>_b=!_b; 
 }
